k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventhub-fe
  namespace: eventhub
  labels:
    app: eventhub-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventhub-fe
  template:
    metadata:
      labels:
        app: eventhub-fe
    spec:
      containers:
        - name: eventhub-fe
          image: eventhub/frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5167
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
